--- a/src/cascadia/TerminalSettingsEditor/Profiles.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles.xaml
@@ -144,81 +144,77 @@
                         </local:SettingContainer>
 
                         <!--  Delete Button  -->
-                        <StackPanel Margin="{StaticResource StandardControlMargin}">
-                            <Button x:Name="DeleteButton"
-                                    IsEnabled="{x:Bind State.Profile.CanDeleteProfile}"
-                                    Style="{StaticResource DeleteButtonStyle}">
-                                <Button.Resources>
-                                    <ResourceDictionary>
-                                        <ResourceDictionary.ThemeDictionaries>
-                                            <ResourceDictionary x:Key="Light">
-                                                <SolidColorBrush x:Key="ButtonBackground"
-                                                                 Color="Firebrick" />
-                                                <SolidColorBrush x:Key="ButtonBackgroundPointerOver"
-                                                                 Color="#C23232" />
-                                                <SolidColorBrush x:Key="ButtonBackgroundPressed"
-                                                                 Color="#A21212" />
-                                                <SolidColorBrush x:Key="ButtonForeground"
-                                                                 Color="White" />
-                                                <SolidColorBrush x:Key="ButtonForegroundPointerOver"
-                                                                 Color="White" />
-                                                <SolidColorBrush x:Key="ButtonForegroundPressed"
-                                                                 Color="White" />
-                                            </ResourceDictionary>
-                                            <ResourceDictionary x:Key="Dark">
-                                                <SolidColorBrush x:Key="ButtonBackground"
-                                                                 Color="Firebrick" />
-                                                <SolidColorBrush x:Key="ButtonBackgroundPointerOver"
-                                                                 Color="#C23232" />
-                                                <SolidColorBrush x:Key="ButtonBackgroundPressed"
-                                                                 Color="#A21212" />
-                                                <SolidColorBrush x:Key="ButtonForeground"
-                                                                 Color="White" />
-                                                <SolidColorBrush x:Key="ButtonForegroundPointerOver"
-                                                                 Color="White" />
-                                                <SolidColorBrush x:Key="ButtonForegroundPressed"
-                                                                 Color="White" />
-                                            </ResourceDictionary>
-                                            <ResourceDictionary x:Key="HighContrast">
-                                                <SolidColorBrush x:Key="ButtonBackground"
-                                                                 Color="{ThemeResource SystemColorButtonFaceColor}" />
-                                                <SolidColorBrush x:Key="ButtonBackgroundPointerOver"
-                                                                 Color="{ThemeResource SystemColorHighlightColor}" />
-                                                <SolidColorBrush x:Key="ButtonBackgroundPressed"
-                                                                 Color="{ThemeResource SystemColorHighlightColor}" />
-                                                <SolidColorBrush x:Key="ButtonForeground"
-                                                                 Color="{ThemeResource SystemColorButtonTextColor}" />
-                                                <SolidColorBrush x:Key="ButtonForegroundPointerOver"
-                                                                 Color="{ThemeResource SystemColorHighlightTextColor}" />
-                                                <SolidColorBrush x:Key="ButtonForegroundPressed"
-                                                                 Color="{ThemeResource SystemColorHighlightTextColor}" />
-                                            </ResourceDictionary>
-                                        </ResourceDictionary.ThemeDictionaries>
-                                    </ResourceDictionary>
-                                </Button.Resources>
-                                <Button.Content>
-                                    <StackPanel Orientation="Horizontal">
-                                        <FontIcon FontSize="{StaticResource StandardIconSize}"
-                                                  Glyph="&#xE74D;" />
-                                        <TextBlock x:Uid="Profile_DeleteButton"
-                                                   Margin="10,0,0,0" />
+                        <Button x:Name="DeleteButton"
+                                Margin="{StaticResource StandardControlMargin}"
+                                Style="{StaticResource DeleteButtonStyle}"
+                                Visibility="{x:Bind State.Profile.CanDeleteProfile}">
+                            <Button.Resources>
+                                <ResourceDictionary>
+                                    <ResourceDictionary.ThemeDictionaries>
+                                        <ResourceDictionary x:Key="Light">
+                                            <SolidColorBrush x:Key="ButtonBackground"
+                                                             Color="Firebrick" />
+                                            <SolidColorBrush x:Key="ButtonBackgroundPointerOver"
+                                                             Color="#C23232" />
+                                            <SolidColorBrush x:Key="ButtonBackgroundPressed"
+                                                             Color="#A21212" />
+                                            <SolidColorBrush x:Key="ButtonForeground"
+                                                             Color="White" />
+                                            <SolidColorBrush x:Key="ButtonForegroundPointerOver"
+                                                             Color="White" />
+                                            <SolidColorBrush x:Key="ButtonForegroundPressed"
+                                                             Color="White" />
+                                        </ResourceDictionary>
+                                        <ResourceDictionary x:Key="Dark">
+                                            <SolidColorBrush x:Key="ButtonBackground"
+                                                             Color="Firebrick" />
+                                            <SolidColorBrush x:Key="ButtonBackgroundPointerOver"
+                                                             Color="#C23232" />
+                                            <SolidColorBrush x:Key="ButtonBackgroundPressed"
+                                                             Color="#A21212" />
+                                            <SolidColorBrush x:Key="ButtonForeground"
+                                                             Color="White" />
+                                            <SolidColorBrush x:Key="ButtonForegroundPointerOver"
+                                                             Color="White" />
+                                            <SolidColorBrush x:Key="ButtonForegroundPressed"
+                                                             Color="White" />
+                                        </ResourceDictionary>
+                                        <ResourceDictionary x:Key="HighContrast">
+                                            <SolidColorBrush x:Key="ButtonBackground"
+                                                             Color="{ThemeResource SystemColorButtonFaceColor}" />
+                                            <SolidColorBrush x:Key="ButtonBackgroundPointerOver"
+                                                             Color="{ThemeResource SystemColorHighlightColor}" />
+                                            <SolidColorBrush x:Key="ButtonBackgroundPressed"
+                                                             Color="{ThemeResource SystemColorHighlightColor}" />
+                                            <SolidColorBrush x:Key="ButtonForeground"
+                                                             Color="{ThemeResource SystemColorButtonTextColor}" />
+                                            <SolidColorBrush x:Key="ButtonForegroundPointerOver"
+                                                             Color="{ThemeResource SystemColorHighlightTextColor}" />
+                                            <SolidColorBrush x:Key="ButtonForegroundPressed"
+                                                             Color="{ThemeResource SystemColorHighlightTextColor}" />
+                                        </ResourceDictionary>
+                                    </ResourceDictionary.ThemeDictionaries>
+                                </ResourceDictionary>
+                            </Button.Resources>
+                            <Button.Content>
+                                <StackPanel Orientation="Horizontal">
+                                    <FontIcon FontSize="{StaticResource StandardIconSize}"
+                                              Glyph="&#xE74D;" />
+                                    <TextBlock x:Uid="Profile_DeleteButton"
+                                               Margin="10,0,0,0" />
+                                </StackPanel>
+                            </Button.Content>
+                            <Button.Flyout>
+                                <Flyout>
+                                    <StackPanel>
+                                        <TextBlock x:Uid="Profile_DeleteConfirmationMessage"
+                                                   Style="{StaticResource CustomFlyoutTextStyle}" />
+                                        <Button x:Uid="Profile_DeleteConfirmationButton"
+                                                Click="DeleteConfirmation_Click" />
                                     </StackPanel>
-                                </Button.Content>
-                                <Button.Flyout>
-                                    <Flyout>
-                                        <StackPanel>
-                                            <TextBlock x:Uid="Profile_DeleteConfirmationMessage"
-                                                       Style="{StaticResource CustomFlyoutTextStyle}" />
-                                            <Button x:Uid="Profile_DeleteConfirmationButton"
-                                                    Click="DeleteConfirmation_Click" />
-                                        </StackPanel>
-                                    </Flyout>
-                                </Button.Flyout>
-                            </Button>
-                            <TextBlock x:Name="DeleteButtonDisclaimer"
-                                       VerticalAlignment="Center"
-                                       Style="{StaticResource DisclaimerStyle}" />
-                        </StackPanel>
+                                </Flyout>
+                            </Button.Flyout>
+                        </Button>
                     </StackPanel>
                 </ScrollViewer>
             </PivotItem>
