--- a/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
@@ -85,16 +85,16 @@
                 <ToggleSwitch IsOn="{x:Bind local:Converters.InvertBoolean(State.Globals.DisableAnimations), BindBack=State.Globals.SetInvertedDisableAnimationsValue, Mode=TwoWay}" />
             </local:SettingContainer>
 
-            <!--  Always Show Tray Icon  -->
-            <local:SettingContainer x:Uid="Globals_AlwaysShowTrayIcon"
-                                    Visibility="{x:Bind FeatureTrayIconEnabled}">
-                <ToggleSwitch IsOn="{x:Bind State.Globals.AlwaysShowTrayIcon, Mode=TwoWay}" />
+            <!--  Always Show Notification Icon  -->
+            <local:SettingContainer x:Uid="Globals_AlwaysShowNotificationIcon"
+                                    Visibility="{x:Bind FeatureNotificationIconEnabled}">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.AlwaysShowNotificationIcon, Mode=TwoWay}" />
             </local:SettingContainer>
 
-            <!--  Minimize To Tray  -->
-            <local:SettingContainer x:Uid="Globals_MinimizeToTray"
-                                    Visibility="{x:Bind FeatureTrayIconEnabled}">
-                <ToggleSwitch IsOn="{x:Bind State.Globals.MinimizeToTray, Mode=TwoWay}" />
+            <!--  Minimize To Notification Area  -->
+            <local:SettingContainer x:Uid="Globals_MinimizeToNotificationArea"
+                                    Visibility="{x:Bind FeatureNotificationIconEnabled}">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.MinimizeToNotificationArea, Mode=TwoWay}" />
             </local:SettingContainer>
         </StackPanel>
     </ScrollViewer>
