Add an Open Settings link to the "Default Terminal" tip (#11491)
This commit switches the [X] button in the info bar to permanently
dismiss the tip and fixes a focus transition issue.

Closes #11483

--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -145,13 +145,14 @@
             <mux:InfoBar x:Name="SetAsDefaultInfoBar"
                          x:Uid="SetAsDefaultInfoBar"
                          x:Load="False"
+                         CloseButtonClick="_SetAsDefaultDismissHandler"
                          IsClosable="True"
                          IsIconVisible="True"
                          IsOpen="False"
                          Severity="Informational">
                 <mux:InfoBar.ActionButton>
-                    <Button x:Uid="InfoBarDismissButton"
-                            Click="_SetAsDefaultDismissHandler" />
+                    <HyperlinkButton x:Uid="SetAsDefaultTip_OpenSettingsLink"
+                                     Click="_SetAsDefaultOpenSettingsHandler" />
                 </mux:InfoBar.ActionButton>
             </mux:InfoBar>
         </StackPanel>
